# esp32-2432S028R

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  run_tests.bat  run_tests.sh  sdkconfig.defaults
.github/workflows/: ci.yml
main/: CMakeLists.txt  demo.c  hardware.h  idf_component.yml  lcd.c  touch.c
main/drivers/: hardware.h  lcd.c  lcd.h  touch.c  touch.h
main/frontend/calibration/: calibration.c  calibration.h
main/frontend/home/: home.c  home.h
main/frontend/keypad/: keypad.c  keypad.h
main/frontend/passkey/: passkey_change.c  passkey_change.h
test/: README.md
test/host_test/: CMakeLists.txt  test_main.c
test/host_test/mocks/: mock_esp_log.c  mock_freertos.c  mock_gpio.c  mock_nvs.c
test/unity/: CMakeLists.txt  partition_table.csv  sdkconfig.defaults
test/unity/components/test_drivers/: CMakeLists.txt  test_lcd.c  test_touch.c
test/unity/components/test_frontend/: CMakeLists.txt  test_calibration.c  test_keypad.c
test/unity/main/: CMakeLists.txt  test_main.c
